--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -5,7 +5,10 @@ import Footer from '../components/Footer.astro';
 import Counter from '../components/Counter.astro';
 ---
 
-<BaseLayout title="Beranda">
+<BaseLayout 
+  title="Beranda"
+  description="Dukung kebijakan buyback kemasan plastik di Indonesia. Konsumen dapat uang, pemulung sejahtera, lingkungan bersih. Bergabunglah dengan gerakan untuk Indonesia yang lebih bersih."
+>
   <Header />
   
   <main>
